--- a/COVID_visualization/Covid_visualizacion.Rmd
+++ b/COVID_visualization/Covid_visualizacion.Rmd
@@ -1,50 +1,62 @@
 ---
-title: "Proyecto Visualizacion Covid"
-author: "dfa Vicente Martínez"
-date: "2024-02-14"
-output: html_document
+title: "Proyecto: Visualización Espacial Covid-19"
+author: "Jesús Martínez Leal"
+date: "`r Sys.Date()`"
+output:
+  html_document:
+    echo: yes
+    number_sections: no
+    theme: readable
+    toc: yes
+subtitle: Máster Ciencia de Datos UV
 ---
 
-```{r}
-library(ggmap)
-# library(rgdal)
-library(dplyr)
-library(tidyr)
-library(tmap)
-library(geospatial)
-library(maps)
-library(raster)
-library(tmaptools)
-library(leaflet)
-library(geojsonio)
-library(leaflet)
-library(ggplot2)
-library(shiny)
-library(shinydashboard)
+```{r setup, cache = F, echo = F, message = F, warning = F, tidy = F}
+# Configuración general de chunks
+library(knitr)
+options(width = 100)
+knitr::opts_chunk$set(echo = F, message = T, error = F, warning = F, comment = NA, dpi = 100, tidy = T, cache.path = '.cache/', fig.path = './figure/', include = F, fig.pos = "H", fig.align = "center")
 ```
 
-```{r }
+Como es habitual, cargamos las librerías que necesitamos al inicio del documento.
+
+```{r librerias, message = T, include = F, echo = F}
+# Carga de librerías necesarias con pacman
+if (!require(pacman)) {
+  install.packages("pacman")
+  library(pacman)
+}
+pacman::p_load(ggmap, dplyr, tidyr, tmap, maps, geospatial, raster, tmaptools, leaflet, geojsonio, ggplot2, shiny, shinydashboard)
+```
+
+```{r}
+dataset_url <- "https://covid.ourworldindata.org/data/owid-covid-data.csv"
+
+data_dir <- "data"
+
+if (!file.exists(data_dir)) {
+  dir.create(data_dir)
+}
+
+file_path <- file.path(data_dir, "owid-covid-data.csv")
+```
+
+```{r dataset_variables, eval = TRUE}
 covid_hospitalizations_raw <- read.csv("./data/owid-covid-data.csv") #el pesado.
-#covid_hospitalizations_raw <- read.csv("./data/covid-hospitalizations.csv")
 
 data("World")
 ```
 
-```{r}
+```{r preprocesado_dataset}
 covid_hospitalizations <- covid_hospitalizations_raw %>%
   mutate(date = as.Date(date)) %>%
-  # Filtrar para que la fecha esté entre 2020-01-01 y 2021-01-01
-  #dplyr::filter(date >= "2020-01-01" & date <= "2024-01-01") %>%
-  # Seleccionar columnas específicas
-  #dplyr::select(iso_code, location, date, total_cases, total_cases_per_million, new_cases_per_million, total_deaths, new_deaths, icu_patients_per_million, weekly_icu_admissions_per_million, weekly_hosp_admissions_per_million, total_tests_per_thousand) %>%
-  # Convertir a formato largo
   dplyr::select(-tests_units) %>%
   pivot_longer(cols = -c(1:4), 
                names_to = "indicator", 
                values_to = "value")
 ```
 
-```{r}
+```{r app}
 initial_value <- "total_cases"
 
 my_palette <- colorRampPalette(c("lightyellow", "darkgreen"))(6)
@@ -57,13 +69,49 @@ ui <- dashboardPage(
   dashboardHeader(title = "COVID-19 App"),
   dashboardSidebar(
     sidebarMenu(
+      menuItem("Acerca de", tabName = "about", icon = icon("info-circle")),
       menuItem("Visualización de indicadores", tabName = "page1", icon = icon("stats", lib = "glyphicon"))
     )
   ),
   dashboardBody(
     tabItems(
-      # Home page
-      # Page 1 content
+      tabItem(tabName = "about",
+        fluidRow(
+          column(width = 12,
+                 h2(strong("INFORMACIÓN BÁSICA SOBRE LA APLICACIÓN"), style = "font-family: 'Arial Black', Gadget, sans-serif;")),
+          column(width = 12,
+                 p("Esta aplicación proporciona visualizaciones interactivas de datos relacionados con COVID-19. Estos se pueden encontrar en la URL:"),
+                 tags$a(href = "https://github.com/owid/covid-19-data/tree/master/public/data", "https://github.com/owid/covid-19-data/tree/master/public/data")
+          ),
+          column(width = 12,
+                 h2(strong("Sobre COVID-19"), style = "font-family: 'Arial Black', Gadget, sans-serif;")),
+          column(width = 12,
+                 p("COVID-19 es una enfermedad infecciosa causada por el coronavirus SARS-CoV-2. Ha tenido un gran impacto en la salud pública y la economía global."),
+                 img(src = "https://www.efsa.europa.eu/sites/default/files/styles/lg_col_12_16x9/public/2023-02/coronavirus-shutterstock_1621031059_0.jpg.webp?itok=fXkpcpzy", style = "width:100%;max-width:500px;height:auto;"),
+                 hr(),
+                 p("Para obtener más información sobre COVID-19, visite fuentes confiables como la Organización Mundial de la Salud (OMS) o los Centros para el Control y la Prevención de Enfermedades (CDC)."),
+                 
+                 tags$ol(
+                   tags$li(a("Info OMS Covid-19", href = "https://www.who.int/es/health-topics/coronavirus#tab=tab_1")),
+                   tags$li(a("Info CDC Covid-19", href = "https://espanol.cdc.gov/coronavirus/2019-ncov/index.html")),
+                   tags$li(a("Info Ministerio de Sanidad de España", href = "https://www.sanidad.gob.es/areas/alertasEmergenciasSanitarias/alertasActuales/nCov/home.htm"))
+                 )
+          )),
+        
+          fluidRow(
+            column(width = 12,
+                   img(src = "https://crisanlaboral.es/wp-content/uploads/2020/09/adhesivos-antideslizantes-permanentes-covid-crisan-laboral-10.jpg", style = "width:100%;max-width:250px;margin-bottom:40px;")),
+          column(width = 12, 
+                 h2(strong("Información Adicional"), style = "font-family: 'Arial Black', Gadget, sans-serif;")),
+          column(width = 12,
+                 p(strong("Autor: Jesús Martínez Leal"))),
+          column(width = 12,
+                 p("Esta aplicación ha sido creada como parte del proyecto de visualización espacial en R de la asignatura de Visualización Avanzada de Datos."))
+        )
+),
+
+
+
       tabItem(tabName = "page1",
               fluidRow(
                 column(width = 4,
@@ -78,13 +126,15 @@ ui <- dashboardPage(
               ),
               fluidRow(
                 column(width = 4),
+                column(width = 8,
+                       actionButton("save_date_button", "Guardar como fecha inicial"))),
+              fluidRow(
+                column(width = 4),
                 column(width = 4,
                        uiOutput("interval_slider_ui")),  # Añadido el uiOutput para el sliderInput del intervalo
                 column(width = 4),
                 column(width = 4,
-                       uiOutput("step_slider_ui")),  # Añadido el uiOutput para el sliderInput del paso
-                column(width = 12,
-                       actionButton("save_date_button", "Guardar como fecha inicial"))  # Botón para guardar la fecha inicial
+                       uiOutput("step_slider_ui"))  # Añadido el uiOutput para el sliderInput del paso
               ),
               fluidRow(
                 leafletOutput("my_tmap", width = "100%")  # Ajustar el ancho del mapa al 100%
@@ -92,36 +142,30 @@ ui <- dashboardPage(
               fluidRow(
                 box(column(width = 12,
                             plotOutput("selected_country_plot")), width = 12))
-              
-      )
-      
-        )
       )
     )
-  
+  )
+)
 
-
-# Server code (not necessary for this example)
-# Server code (no es necesario para este ejemplo)
 server <- function(input, output, session) {
   output$informacion_covid <- renderUI({
   })
   
   # Crear un valor reactivo para almacenar la fecha inicial
   initial_date <- reactiveVal(as.Date("2020-01-06"))
-  
-  output$informacion_covid <- renderUI({
-  })
+
   
   observe({
     # Filter available dates based on selected indicator
     selected_indicator <- input$indicator_selector
   })
   
+  max_date <- max(as.Date(covid_hospitalizations$date))
+  
   output$date_slider_ui <- renderUI({
     sliderInput("date_slider", label = "Selecciona la fecha:",
                 min = as.Date("2020-01-06"),
-                max = as.Date("2024-01-01"),
+                max = max_date,
                 value = initial_date(),  # Utilizar la fecha inicial almacenada
                 step = 1,
                 animate = animationOptions(
